--- a/index.html
+++ b/index.html
@@ -7,7 +7,22 @@
     <title>Proyecto</title>
 </head>
 <body>
-    <h1>Hola mundo desde github </h1>
-    <img src="prueba.jpg" width="500" heigtht="auto">
+    <body bgcolor="#C1D5A8">
+        <table width="100%" align="center" cellspacing="0" cellpadding="7">
+            <tr bgcolor="white">
+                <td bgcolor="#BCE6F2" width="70%"><font color="#202938" size="4" face="Arial">Home</font></td>
+                <td align="center"><a href="Pasatiempos.html"><font color="black" size="3" face="Arial">Pasatiempos</font></td></a>
+                <td align="center"><a href="Metas.html"><font color="black" size="3" face="Arial">Metas</font></td></a>
+                <td align="center"><a href="contacto.html"><font color="black" size="3" face="Arial">Contacto</font></td></a>
+            </tr>
+        </table><br><br><br><br><br>
+        <h1>Mi Perfil</h1><br><br>
+        <table width="100%">
+            <tr align="center">
+            <td width="50%"><h3>Hola mi nombre es Wilfredo José Orellana Guillén, tengo 17 años de edad, en dichos instantes soy alumno del colegio Marista la Inmaculada de Comayagua, estoy cursando la carrera de informática y estoy en mí último año.<br><br> Soy un adolescente con gran actitud también me considero que soy una persona muy amable, me fascina estar al pendiente de la mayor parte de ocupaciones de mi alrededor y constantemente estar presente cuando alguien me necesite.</h3>   
+            </td>
+            <td> <img src="img/principal.jpg" width="300" height="auto"></td>
+        </tr>
+        </table> 
 </body>
 </html>
